# AgenticAICourse_KrrishNaik

./: cmnds.txt
M01_PythonPrerequisites/: main.py  pyproject.toml
M01_PythonPrerequisites/1-Python Basics/: 1.0-basic.ipynb
M02_Pydantic/: pydantic_intro.ipynb  pyproject.toml
M03_Langchain/: pyproject.toml  requirements.txt
M03_Langchain/1.1-googleAI/: 1.1.1-GettingStarted.ipynb
M03_Langchain/1.2-ollama/: app.py
M03_Langchain/3.2-DataIngestion/: 3.2 DataIngestion.ipynb
M03_Langchain/3.3-Data Transformer/: 3.3-RecuriveCharactertextsplitter.ipynb  3.4-CharacterTextsplitter.ipynb  3.5-HTMLtextsplitter.ipynb  3.6-RecursiveJsonSplitter.ipynb
M03_Langchain/4-Embeddings/: 4.1-googleGenAIEmbedding.ipynb  4.2-ollamaemnedding.ipynb  4.3-huggingface.ipynb
M03_Langchain/5-VectorStore/: 5.1-Faiss.ipynb  5.2-Chroma.ipynb
M03_Langchain/5-VectorStore/chroma_db/: chroma.sqlite3
M03_Langchain/5-VectorStore/faiss_index/: index.faiss  index.pkl
M04_GoogleAI_Ollama/: pyproject.toml  requirements.txt
M04_GoogleAI_Ollama/1.1-GoogleAI/: 1.1.1-GettingStarted.ipynb  1.1.2-Simpleapp.ipynb
M05_LangChainExpressionLanguage/: pyproject.toml  requirements.txt  serve.py  simplellmLCEL.ipynb
M06_LangchainChatbot/: 1-chatbots.ipynb  2-vector_retrievers.IPYNB  pyproject.toml  requirements.txt
M08_LangGraph/: pyproject.toml  requirements.txt
M08_LangGraph/S01_LangGraph_Basics/: T01_simpleGraph.ipynb  T02_Chatbot.ipynb
M08_LangGraph/S02_LangGraph_Components/: T01_DataStateSchema.ipynb  T02_pydantic.ipynb  T03_ChainsLangGraph.ipynb
