[project]
name = "m01-pythonprerequisites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "memory-profiler>=0.61.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
]
