[project]
name = "m03-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "chromadb>=1.0.21",
    "duckdb>=1.3.2",
    "duckduckgo-search==5.3.1b1",
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langchain-text-splitters>=0.3.11",
    "mysql-connector-python>=9.4.0",
    "numexpr>=2.12.1",
    "openai>=1.107.2",
    "pandas>=2.3.2",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "pytube>=15.0.0",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "unstructured>=0.18.14",
    "validators==0.28.1",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.2",
]
