[project]
name = "m04-googleai-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.8",
    "python-dotenv>=1.1.1",
]
