[project]
name = "m08-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "langgraph-cli[inmem]>=0.4.2",
    "python-dotenv>=1.1.1",
    "wikipedia>=1.4.0",
]
